# navigator-admin-backend

./: .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  DESIGN.md  DEVELOPERS.md  Dockerfile  Dockerfile.postgres  Dockerfile.webapp  GETTING_STARTED.md  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  init-s3.py  pr_body.md  pyproject.toml  service-manifest.json
.github/: CODEOWNERS  auto-tag.sh  dependabot.yml  funcs.sh  pull_request_template.md  retag-and-push.sh
.github/tests/: test_auto_tag.bats
.github/workflows/: auto-tagging-failsafe.yml  ci-cd.yml  ci.yml  debug.yml  deploy-production.yml  deploy-staging.yml  main-push-autotag.yml  main-push-git-autotag.yml  merge-to-main.yml  precommit.yml  semver.yml  tag-and-release.yml  tag.yml
.trunk/: configure-pyright-with-pyenv.sh  trunk.yaml
.trunk/configs/: bandit.yaml  ruff.toml
app/: config.py  enums.py  errors.py  initial_data.py  logging_config.py  main.py  main.py.orig  service-manifest.json  telemetry.py  telemetry_config.py
app/api/api_v1/: query_params.py
app/clients/aws/: client.py  s3bucket.py
app/clients/db/: session.py
app/db/: session.py
app/errors/: authentication_error.py  repository_error.py  token_error.py  validation_error.py
app/model/: analytics.py  app_token.py  authorisation.py  aws_config.py  bulk_import.py  collection.py  config.py  corpus.py  corpus_type.py  custom_app.py  document.py  event.py  family.py  general.py  ingest.py  jwt_user.py  organisation.py  user.py
app/repository/: __init__.py  app_user.py  collection.py  config.py  corpus.py  corpus_type.py  document.py  document_file.py  event.py  family.py  geography.py  helpers.py  metadata.py  organisation.py  protocols.py  s3bucket.py
app/service/: analytics.py  app_token.py  app_user.py  authentication.py  authorisation.py  bulk_import.py  category.py  collection.py  config.py  corpus.py  corpus_type.py  custom_app.py  database_dump.py  document.py  event.py  family.py  family.py.orig  geography.py  health.py  id.py  ingest.py  metadata.py  notification.py  organisation.py  taxonomy.py  token.py  token.py.orig  validation.py
docs/: password-hashes.md
docs/runbooks/: flush-rds-connections.md
infra/: Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py
infra/resources/: app_runner_service.py  ecr_repository.py  naming.py
integration_tests/: blank.sql  conftest.py  default-data.sql  setup_db.py  test_config.py  test_family.py
integration_tests/analytics/: test_get.py
integration_tests/collection/: test_collection_create.py  test_collection_delete.py  test_collection_get.py  test_collection_search.py  test_collection_update.py  test_create.py  test_delete.py  test_get.py  test_search.py  test_update.py
integration_tests/document/: test_create.py  test_delete.py  test_get.py  test_search.py  test_update.py
integration_tests/event/: test_create.py  test_delete.py  test_get.py  test_search.py  test_update.py
integration_tests/family/: family_helpers.py  test_create.py  test_delete.py  test_family_create.py  test_family_delete.py  test_family_get.py  test_family_search.py  test_family_update.py  test_get.py  test_search.py  test_update.py
integration_tests/login/: test_login.py
integration_tests/mocks/: bad_collection_repo.py  bad_document_repo.py  bad_event_repo.py  bad_family_repo.py  rollback_collection_repo.py  rollback_document_repo.py  rollback_event_repo.py  rollback_family_repo.py
integration_tests/server/: test_server.py
scripts/: generate_new_user_sql.sh  update-db-model.sh
scripts/testing/: config  get-all-documents  get-all-families  get-config  get-family  health  search-families  update-family
tests/: conftest.py
tests/helpers/: analytics.py  app_token.py  bulk_import.py  collection.py  corpus.py  corpus_type.py  custom_app.py  document.py  event.py  family.py  ingest.py  organisation.py  utils.py
tests/integration_tests/: blank.sql  conftest.py  default-data.sql  init-s3.py  setup_db.py  test_config.py  test_with_database.py  test_with_transaction.py
tests/integration_tests/analytics/: test_get.py
tests/integration_tests/app_token/: test_create.py
tests/integration_tests/bulk_import/: test_bulk_import.py  test_bulk_import_template.py
tests/mocks/: family_service.py
tests/repository/: test_repo_family.py
tests/routers/: test_family.py
tests/service/: test_family_service.py
tests/unit_tests/: conftest.py
unit_tests/: conftest.py  conftest.py.orig
unit_tests/helpers/: analytics.py  collection.py  document.py  event.py  family.py
unit_tests/mocks/: app_user_repo.py  collection_repo.py  family_repo.py  family_service.py  geography_repo.py  geography_service.py  metadata_service.py  organisation_repo.py  organisation_service.py
unit_tests/repository/: test_repo_family.py
unit_tests/routers/: README.md  test_analytics.py  test_auth.py  test_collection.py  test_config.py  test_document.py  test_event.py  test_family.py  test_family.py.orig
unit_tests/service/: test_analytics_service.py  test_authorisation_service.py  test_collection_service.py  test_document_service.py  test_event_service.py  test_family_service.py  test_geography_service.py  test_id_service.py  test_metadata_service.py  test_token_service.py  token_service.py
(+246 files in other folders)
