[tool.poetry]
name = "admin_backend"
version = "2.16.2"
description = ""
authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
packages = [{ include = "app" }, { include = "tests" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
fastapi-health = "^0.4.0"
fastapi-pagination = "^0.12.9"
python-slugify = "^6.1.2"
requests = "^2.28"
requests-toolbelt = "^0.10.1"
SQLAlchemy = "^1.4.53"
SQLAlchemy-Utils = "^0.38.2"
uvicorn = { extras = ["standard"], version = "^0.30.4" }
json-logging = "^1.3.0"
httpx = "^0.24.1"
psycopg2-binary = "^2.9.3"
pylint = "^3.2.7"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pip = "^24.2"
poetry = "^1.6.1"
boto3 = "^1.34.151"
moto = "^4.2.2"
types-sqlalchemy = "^1.4.53.38"
urllib3 = "^1.26.17"
db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", tag = "v3.8.17" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
python-dotenv = "^0.19.2"
pytest = "^8.3.2"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.7.0"
black = "^24.4.2"
pyright = "1.1.374"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
env_files = """
    .env.test
    .env
"""
markers = ["unit"]
asyncio_mode = "strict"

[tool.pydocstyle]
ignore = """
"""

[tool.black]
line-length = 88
target-version = ["py39"]
exclude = "^/alembic/versions/"

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.9"
venv = "admin-backend"
